--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "C42-node-oauth",
+  "name": "c42-node-oauth",
   "version": "1.0.0",
   "description": "oAuthClient example for Calendar42",
   "main": "index.js",
@@ -7,5 +7,8 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
-  "license": "ISC"
+  "license": "ISC",
+  "dependencies": {
+    "oauth": "^0.9.14"
+  }
 }
